force-app/main/default/objects/FinancingRate__c/FinancingRate__c.object-meta.xml
<CustomObject>
    <label>Taxa de Financiamento</label>
    <nameField>
        <label>Nome da Taxa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxas de Financiamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>