force-app/main/default/objects/FinancingRate__c/fields/AnticipationRate__c.field-meta.xml
<CustomField>
    <fullName>AnticipationRate__c</fullName>
    <label>Taxa de Antecipação</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>