force-app/main/default/objects/FinancingRate__c/fields/InstallmentRate3__c.field-meta.xml
<CustomField>
    <fullName>InstallmentRate3__c</fullName>
    <label>Taxa da Parcela 3</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>