force-app/main/default/objects/FinancingRate__c/fields/InstallmentRate4__c.field-meta.xml
<CustomField>
    <fullName>InstallmentRate4__c</fullName>
    <label>Taxa da Parcela 4</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>