force-app/main/default/objects/FinancingRate__c/fields/Installments1__c.field-meta.xml
<CustomField>
    <fullName>Installments1__c</fullName>
    <label>Opção de Parcela 1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>