force-app/main/default/objects/FinancingRate__c/fields/Installments3__c.field-meta.xml
<CustomField>
    <fullName>Installments3__c</fullName>
    <label>Opção de Parcela 3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>